updated to fix arg issue

--- a/kfctl_istio_dex.v1.2.0.yaml
+++ b/kfctl_istio_dex.v1.2.0.yaml
@@ -86,5 +86,5 @@ spec:
     name: kfserving
   repos:
   - name: manifests
-    uri: file://./v1.2-branch.tar.gz
+    uri: https://github.com/kalenpeterson/custom-kubeflow-installer/raw/main/v1.2-branch.tar.gz
   version: v1.2-branch
